# r3d

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  sequences.txt
r3d/: __init__.py  types.py
r3d/data_gen/: generate_qa.py
r3d/data_gen/extractor/: calibration.py  movement.py  object_info.py  position.py  scene_objects.py
r3d/data_gen/filter/: distance.py  global.py  uniqueness.py  visibility.py
r3d/data_gen/generators/: base.py  complex.py  disambiguation.py  distance.py  multihop.py  size.py  visualize.py
r3d/data_gen/utils/: annotation_schema.py  functional_volume.py  mesh_utils.py  name_mapping.py  scene_helpers.py  sequence.py  volume_categories.py
r3d/pipeline/: frame_data.py  hf_dataset.py  scene_builder.py  scene_state.py  segmentation.py  volume.py
r3d/pipeline/eval/: config.py  filtering.py  hf_vlm.py  prompts.py  reporter.py  responses.py  rgb.py  scorer.py  scores.py  tool_use.py  vllm_client.py  vlm.py
r3d/pipeline/scripts/: build_scene.py  generate_eval_table.py  generate_responses.py  generate_scores.py  (+1 more)
r3d/scripts/: dataset_tutorial.py  rgb_overlay_evals.py
r3d/utils/: adt_provider.py  aria_images.py  logging.py  rle.py  transforms.py  video.py  viz.py
scripts/: generate_dataset.sh  run_build_scene.sh  run_eval_35b.sh  run_eval_8b_full.sh  run_eval_8b_quick.sh  run_populate_frames.sh  run_rgb_baseline.sh  run_tests.sh
tests/integration/: test_generate_scores.py
tests/unit/: test_build_scene.py  test_rle.py  test_scene_state.py  test_scorer.py  test_stores.py  test_transforms.py  test_types.py  test_volume.py
(+3 files in other folders)
